alles verbeterd entiteiten tot en met het inloggen met tokens